Fix mobile page overflow

--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -1,40 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Ubuntu+Mono&display=swap');
 
-/* @property --color1 {
-    syntax: '<color>';
-    inherits: false;
-    initial-value: #2B0948;
-}
-
-@property --color2 {
-    syntax: '<color>';
-    inherits: false;
-    initial-value: #883E41;
-} */
-
-/* :root {
-    --color1: #2B0948;
-    --color2: #883E41;
-} */
-
 html,
 body {
     background-image: linear-gradient(90deg, var(--color1), var(--color2));
-    background-size: 200vw 100vh;
     color: var(--color1);
-    transition: all 0.5s ease, --color1 500ms ease, --color2 500ms ease;
+    transition: --color1 500ms ease, --color2 500ms ease;
 }
 
 html {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
     font-family: Manrope, sans-serif;
-    font-size: 28px;
+    font-size: clamp(16px, 6vh, 28px);
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 a {
@@ -72,7 +54,6 @@ code {
 }
 
 .quote-content {
-    opacity: 1;
     transition: all 0.5s ease;
 }
 
@@ -88,14 +69,14 @@ code {
 
 .inverted-comma::after {
     content: "“";
-    font-size: 112px;
+    font-size: clamp(64px, 24vh, 112px);
     position: absolute;
     left: -5px;
-    top: -30px;
+    top: calc(clamp(22.857px, 6.3vh, 30px) * -1);
 }
 
 .text {
-    text-indent: 40px;
+    text-indent: clamp(17.1429px, 8.5vh, 40px);
     text-align: justify;
     text-justify: inter-word;
     hyphens: auto;
